# simulacrum-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  check_installation.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
simulacrum/: __init__.py  _version.py  server.py
simulacrum/core/: __init__.py  engine.py  equation_parser.py  interfaces.py  numerical.py
simulacrum/tools/: __init__.py  belief.py  chaos.py  comparison.py  dynamics.py  feedback.py  game_theory.py  probability.py  vector_analysis.py
simulacrum/validation/: __init__.py  errors.py  types.py
tests/: conftest.py  test_belief.py  test_chaos.py  test_comparison.py  test_dynamics.py  test_feedback.py  test_game_theory.py  test_probability.py  test_vector_analysis.py
